DRAFT user auth
Co-authored-by: Shawn Condon <shwncndn@users.noreply.github.com>
Co-authored-by: Dr. Alena <dr-acc@users.noreply.github.com>
Co-authored-by: phaleth <phaleth@users.noreply.github.com>
Co-authored-by: stebbinsi2 <stebbinsi2@users.noreply.github.com>
Co-authored-by: rflazaro <rflazaro@users.noreply.github.com>
Co-authored-by: monaroo <monaroo@users.noreply.github.com>
Co-authored-by: Reagan W. <BLAXPIAS05@users.noreply.github.com>
Co-authored-by: SantaAna <SantaAna@users.noreply.github.com>
Co-authored-by: Mario Vellandi <mvellandi@users.noreply.github.com>
Co-authored-by: Jazz  <jazzgarcha@users.noreply.github.com>

--- a/pic_chat/lib/pic_chat_web/live/message_live/index.html.heex
+++ b/pic_chat/lib/pic_chat_web/live/message_live/index.html.heex
@@ -17,7 +17,7 @@
     <div class="sr-only">
       <.link navigate={~p"/messages/#{message}"}>Show</.link>
     </div>
-    <.link patch={~p"/messages/#{message}/edit"}>Edit</.link>
+    <.link navigate={~p"/messages/#{message}/edit"}>Edit</.link>
   </:action>
   <:action :let={{id, message}}>
     <.link
@@ -42,5 +42,6 @@
     action={@live_action}
     message={@message}
     patch={~p"/messages"}
+    current_user={@current_user}
   />
 </.modal>
