--- a/pic_chat/lib/pic_chat_web/live/message_live/show.html.heex
+++ b/pic_chat/lib/pic_chat_web/live/message_live/show.html.heex
@@ -10,6 +10,7 @@
 
 <.list>
   <:item title="Content"><%= @message.content %></:item>
+  <:item title="Picture"><img src={@message.picture} /></:item>
 </.list>
 
 <.back navigate={~p"/messages"}>Back to messages</.back>
