Add Pagination + Infinite scroll and message highlighting
Co-authored-by: Dr. Alena <dr-acc@users.noreply.github.com>
Co-authored-by: Reagan W. <BLAXPIAS05@users.noreply.github.com>
Co-authored-by: phaleth <phaleth@users.noreply.github.com>
Co-authored-by: SantaAna <SantaAna@users.noreply.github.com>
Co-authored-by: Jazz  <jazzgarcha@users.noreply.github.com>
Co-authored-by: rflazaro <rflazaro@users.noreply.github.com>
Co-authored-by: stebbinsi2 <stebbinsi2@users.noreply.github.com>
Co-authored-by: Shawn Condon <shwncndn@users.noreply.github.com>
Co-authored-by: monaroo <monaroo@users.noreply.github.com>
Co-authored-by: Mario Vellandi <mvellandi@users.noreply.github.com>
Co-authored-by: shaler7882 <shaler7882@users.noreply.github.com>
Co-authored-by: Luis Herrera <Donluisherrera@gmail.com>

--- a/pic_chat/assets/css/app.css
+++ b/pic_chat/assets/css/app.css
@@ -3,3 +3,15 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+@keyframes animateColor {
+    0% {
+        background-color: red;
+    }
+    100% {
+        background-color: current;
+    }
+}
+
+.bg-flash-red {
+    animation: animateColor 1s ease-out;
+}
